crates/koruma-derive/src/expand/snapshots/koruma_derive__expand__snapshot_tests__koruma_expansion_optional_field.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum UserProfileUsernameValidator {
    StringLengthValidation(StringLengthValidation),
}
#[derive(Clone, Debug)]
pub struct UserProfileUsernameError {
    string_length_validation: Option<StringLengthValidation>,
}
impl UserProfileUsernameError {
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<UserProfileUsernameValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.string_length_validation {
            result.push(UserProfileUsernameValidator::StringLengthValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum UserProfileBioValidator {
    StringLengthValidation(StringLengthValidation),
}
#[derive(Clone, Debug)]
pub struct UserProfileBioError {
    string_length_validation: Option<StringLengthValidation>,
}
impl UserProfileBioError {
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<UserProfileBioValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.string_length_validation {
            result.push(UserProfileBioValidator::StringLengthValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct UserProfileValidationError {
    username: UserProfileUsernameError,
    bio: UserProfileBioError,
}
impl UserProfileValidationError {
    pub fn username(&self) -> &UserProfileUsernameError {
        &self.username
    }
    pub fn bio(&self) -> &UserProfileBioError {
        &self.bio
    }
}
impl koruma::ValidationError for UserProfileValidationError {
    fn is_empty(&self) -> bool {
        self.username.is_empty() && self.bio.is_empty()
    }
}
impl UserProfile {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), UserProfileValidationError> {
        let mut error = UserProfileValidationError {
            username: UserProfileUsernameError {
                string_length_validation: None,
            },
            bio: UserProfileBioError {
                string_length_validation: None,
            },
        };
        let mut has_error = false;
        let __value = &self.username;
        let validator = StringLengthValidation::builder()
            .min(1)
            .max(50)
            .with_value(__value.clone())
            .build();
        if validator.validate(__value).is_err() {
            error.username.string_length_validation = Some(validator);
            has_error = true;
        }
        if let Some(ref __value) = self.bio {
            let validator = StringLengthValidation::builder()
                .min(1)
                .max(200)
                .with_value(__value.clone())
                .build();
            if validator.validate(__value).is_err() {
                error.bio.string_length_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
