crates/koruma-derive/src/expand/snapshots/koruma_derive__expand__snapshot_tests__koruma_expansion_validator_no_args.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum ItemValueKorumaValidator {
    EvenNumberValidation(EvenNumberValidation),
}
#[derive(Clone, Debug)]
pub struct ItemValueKorumaValidationError {
    even_number_validation: Option<EvenNumberValidation>,
}
impl ItemValueKorumaValidationError {
    pub fn even_number_validation(&self) -> Option<&EvenNumberValidation> {
        self.even_number_validation.as_ref()
    }
    /// Returns all failed field-level validators.
    pub fn all(&self) -> Vec<ItemValueKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.even_number_validation {
            result.push(ItemValueKorumaValidator::EvenNumberValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.even_number_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct ItemKorumaValidationError {
    value: ItemValueKorumaValidationError,
}
impl ItemKorumaValidationError {
    pub fn value(&self) -> &ItemValueKorumaValidationError {
        &self.value
    }
}
impl koruma::ValidationError for ItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.value.is_empty()
    }
}
impl Item {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        let mut error = ItemKorumaValidationError {
            value: ItemValueKorumaValidationError {
                even_number_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.value;
        let validator = EvenNumberValidation::builder()
            .with_value(__field_value.clone())
            .build();
        if !validator.validate(__field_value) {
            error.value.even_number_validation = Some(validator);
            has_error = true;
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl koruma::ValidateExt for Item {
    type Error = ItemKorumaValidationError;
    fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        Item::validate(self)
    }
}
