crates/koruma-derive/src/expand/snapshots/koruma_derive__expand__snapshot_tests__validator_expansion_generic.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
#[derive(koruma::bon::Builder)]
#[derive(Clone, Debug)]
pub struct GenericRangeValidation<T> {
    pub min: T,
    pub max: T,
    pub actual: Option<T>,
}
impl<T, S: generic_range_validation_builder::State> GenericRangeValidationBuilder<T, S>
where
    S::Actual: koruma::bon::IsUnset,
{
    /// Sets the value field. This is auto-generated by `#[koruma::validator]`.
    pub fn with_value(
        self,
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::SetActual<S>,
    > {
        self.actual(value)
    }
}
/// Auto-generated macro for implementing `Validate` for multiple types.
///
/// # Example
/// ```ignore
/// #macro_name!(i32, i64, f32, f64 => |self, value| {
///     *value >= self.min && *value <= self.max
/// });
/// ```
#[macro_export]
macro_rules! impl_generic_range_validation {
    ($($t:ty),+ $(,)? => $validate:expr) => {
        $(impl koruma::Validate < $t > for GenericRangeValidation < $t > { fn validate(&
        self, value : & $t) -> bool { let f : fn (& Self, & $t) -> bool = $validate;
        f(self, value) } })+
    };
}
